<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Arinc665Qt::ViewMediaSetXmlWindow</class>
 <widget class="QMainWindow" name="Arinc665Qt::ViewMediaSetXmlWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>800</width>
    <height>600</height>
   </rect>
  </property>
  <property name="windowIcon">
   <iconset resource="../resources/arinc665_qt_resources.qrc">
    <normaloff>:/media_set/arinc665_media_set.svg</normaloff>:/media_set/arinc665_media_set.svg</iconset>
  </property>
  <widget class="QWidget" name="centralwidget">
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QSplitter" name="splitter">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
      </property>
      <widget class="Arinc665Qt::Media::MediaSetViewWidget" name="mediaSetView" native="true"/>
      <widget class="QTableView" name="filePathMapping">
       <property name="alternatingRowColors">
        <bool>true</bool>
       </property>
       <property name="selectionMode">
        <enum>QAbstractItemView::NoSelection</enum>
       </property>
       <property name="selectionBehavior">
        <enum>QAbstractItemView::SelectRows</enum>
       </property>
       <attribute name="horizontalHeaderStretchLastSection">
        <bool>true</bool>
       </attribute>
       <attribute name="verticalHeaderVisible">
        <bool>false</bool>
       </attribute>
      </widget>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QToolBar" name="toolBar">
   <property name="windowTitle">
    <string>toolBar</string>
   </property>
   <attribute name="toolBarArea">
    <enum>TopToolBarArea</enum>
   </attribute>
   <attribute name="toolBarBreak">
    <bool>false</bool>
   </attribute>
   <addaction name="actionOpenMediaSetXml"/>
  </widget>
  <action name="actionOpenMediaSetXml">
   <property name="text">
    <string>Open Media Set XML</string>
   </property>
   <property name="toolTip">
    <string>Opens an ARINC 665 Media Set XML</string>
   </property>
  </action>
 </widget>
 <customwidgets>
  <customwidget>
   <class>Arinc665Qt::Media::MediaSetViewWidget</class>
   <extends>QWidget</extends>
   <header location="global">arinc665_qt/media/MediaSetViewWidget.hpp</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources>
  <include location="../resources/arinc665_qt_resources.qrc"/>
 </resources>
 <connections/>
</ui>
